--- a/misto.html
+++ b/misto.html
@@ -22,17 +22,17 @@
                             <ul>
                                 <li><a href="index.html">Головна</a></li>
                                 <li><a href="people.html">Видатні особи</a></li>
-                                <!-- <li><a href="" class="active" >Про місто</a></li> -->
                             </ul>
                         </nav>
                     </div>
                 </div>
             </header>
+            
             <section class="main">
                 <div class="container">
                     <h2>Про місто</h2>
                     <article>
-                        <h3>Корисні копалини</h3>
+                        <h3>Корисні копалини вінничини</h3>
                         <div class="misto__img">
                             
                             <img src="images/misto/almaz_dobicha.jpg" alt="">
